# micius

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  production.yml
bench/load/: go.mod  main.go
docs/: benchmarks.md  implementation-plan-phase1.md  implementation-plan.md
proto/storage/v1/: storage.proto
storage-engine/: Cargo.toml  build.rs
storage-engine/src/: config.rs  lib.rs  main.rs  metrics.rs  types.rs
storage-engine/src/chunk/: format.rs  mod.rs  reader.rs  writer.rs
storage-engine/src/compaction/: mod.rs
storage-engine/src/index/: chunk_index.rs  mod.rs  persistence.rs
storage-engine/src/memtable/: mod.rs
storage-engine/src/server/: mod.rs
storage-engine/src/wal/: group_commit.rs  mod.rs  proto.rs  recovery.rs  writer.rs
storage-engine/tests/: chunkreader.rs  chunkreader_test.rs  chunkwriter_test.rs  compaction.rs  index.rs  index_test.rs  memtable.rs  memtable_test.rs  server.rs  wal.rs  wal_test.rs
storage-engine/tests/common/: mod.rs
