[package]
name = "storage-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio          = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }


# gRPC
tonic          = "0.11"
prost          = "0.12"

# Checksum
crc32fast      = "1"

# Error handling
anyhow         = "1"
thiserror      = "1"

# Serialization (index persistence)
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

# Compression
lz4_flex       = { version = "0.11", features = ["frame"] }

# Bloom filter
bloomfilter    = "1"

# Observability
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }
prometheus           = { version = "0.13", features = ["process"] }

# Utilities
uuid           = { version = "1", features = ["v4"] }
bytes          = "1"
tempfile = "3.27.0"
xxhash-rust = { version = "0.8.15", features = ["xxh64"] }
bincode = "1"

[build-dependencies]
tonic-build = "0.11"
